test/errors/error42.base
None of the following types: real, fix16, matches with any of the following types array(real), array(real, 'unbound). 
  val x;
  x[0] = 1.0;
   ^
